--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@
 # For developpers, if you modify this theme, put your images in `source/images` folder and
 # use grunt task `build` to synchronize assets
 
-baseURL = "https://zeror.xyz/"
+baseURL = "https://WhiteTraveller.github.io/"
 languageCode = "zh-cn"
 defaultContentLanguage = "zh-cn"
 title = "白色旅人"
