--- a/config.toml
+++ b/config.toml
@@ -349,7 +349,7 @@ canonifyurls = true
       clientId = 'fa663374f2c9025f7752'
       clientSecret = '251bc0a83649cde9efdf8209b099ffd9f9ec6c5c'
       owner = 'WhiteTraveller'
-      repo = 'gittalk_wt'
+      repo = 'WhiteTraveller.github.io'
       # See all options: https://github.com/gitalk/gitalk#options
       [params.comment.gitalk.options]
         language = "zh"
