--- a/config.toml
+++ b/config.toml
@@ -325,9 +325,9 @@ canonifyurls = true
   # -------------------
   # Integrated services
   # -------------------
-   Gravatar
-    >> See Author section
-      [author]
+  # Gravatar
+  #  >> See Author section
+  #    [author]
   #      gravatarEmail = zhaomargatroid@outlook.com
   # Google Analytics
   #  >> See googleAnalytics
