--- a/config.toml
+++ b/config.toml
@@ -45,7 +45,7 @@ canonifyurls = true
 # ------
 [author]
   name = "白色旅人"
-  bio = "白色的旅人 很白"
+  bio = "啊啊...天亮了&*……￥%#￥"
   job = "带学生"
   location = "HFUT"
   # Your Gravatar email. Overwrite `author.picture` everywhere in the blog
