--- a/config.toml
+++ b/config.toml
@@ -45,14 +45,14 @@ canonifyurls = true
 # ------
 [author]
   name = "白色旅人"
-  bio = "啊啊...天亮了&*……￥%#￥"
+  bio = "啊啊...天亮了"
   job = "带学生"
-  location = "HFUT"
+  location = "魔法森林人形组装厂"
   # Your Gravatar email. Overwrite `author.picture` everywhere in the blog
-  gravatarEmail = "zhaomargatroid@outlook.com"
+  gravatarEmail = 
   # Your profile picture
   # Overwritten by your gravatar image if `author.gravatarEmail` is filled
-  picture = "/images/favicon.png" 
+  picture = "https://tva1.sinaimg.cn/large/006BpP3mgy1h93mbn6zpdj30hs0hs74r.jpg" 
   # Your Twitter username without the @. E.g : thibaudlepretre
   # twitter = "thibaudlepretre"
   # Your google plus profile id. E.g : +ThibaudLepretre or 114625208755123718311
